# mcp-jusbrasil

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_credenciais.py
src/jusbrasil_mcp/: __init__.py  jusbrasil_client.py  server.py
tests/: test_parser.py
tests/fixtures/: decisao_stj_aginteresp.html  decisao_tjpi_apelacao.html
