[project]
name = "jusbrasil-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "scrapling[ai,fetchers]>=0.4.7",
]

[project.scripts]
jusbrasil-mcp = "jusbrasil_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
